# number_recognition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  mnistdataitem.cpp  mnistdataitem.h  mnistdatareader.cpp  mnistdatareader.h  version.h.in
.github/workflows/: build.yml  build_ubuntu.yml  cmake.yml  cpplint.yml
cmd/: CMakeLists.txt  application.cpp  application.h  main.cpp
cmd/include/: application.h  application.hpp
cmd/src/: application.cpp  main.cpp
gui/: CMakeLists.txt  drawwidget.cpp  drawwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
gui/include/: drawwidget.h  drawwidget.hpp  mainwindow.h  mainwindow.hpp  mnistlearningform.h  mnistlearningform.hpp
gui/src/: drawwidget.cpp  main.cpp  mainwindow.cpp  mnistlearningform.cpp
lib/: CMakeLists.txt
lib/include/: helloworld.h  logger.h  mnistcsvdataset.hpp  neuron.h  neuron.hpp  perceptron.h  perceptron.hpp
lib/src/: helloworld.cpp  neuron.cpp  perceptron.cpp
tests/: CMakeLists.txt  test_gettestnumber.cpp  test_mnist_csv_dataset.cpp  test_neuron.cpp
tools/: run_cppcheck.sh
